styles.css
/* Global Styles */

@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);

:root {
  font-family: "Open Sans", sans-serif;
  color: #486169;
  text-shadow: 2px 2px 3px #fff;
}

body {
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  min-height: 100%;
  background-image: url("assets/bg1.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 100vh;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

/* Top Title */
.resource-list.header {
  color: #486169;
  font-weight: 600;
}

.resource-section__title {
  margin-top: 3em;
  text-align: center;
  font-size: 2.5rem;
  margin-bottom: 1em;
}

/* Top Navbar Section for Table */
.main {
  flex: 1;
}
.resource-list thead tr {
  background-color: #d9f2fe;
  color: #ffffff;
}

.resource-list {
  margin: auto;
  text-align: center;
  border-radius: 5px 5px 0 0;
  overflow: hidden;
}

table {
  border-collapse: collapse;
  background-color: white;
  width: 80%;
  box-shadow: 3px 3px 5px #7f7f7f, -3px -3px 5px #676767;
}

th,
td {
  border: 1px solid black;
  padding: 0.5em;
  text-align: center;
}

tr.resource-row:nth-of-type(even) {
  background-color: #ecfbff;
}

tr.resource-row:nth-of-type(even) input {
  background-color: #ecfbff;
}

th:nth-child(2) {
  width: 30%;
}

th:nth-child(7) {
  width: 20%;
}

/* Sorting Style */
th button::after {
  position: absolute;
  right: 0.5rem;
}
th button[data-dir="asc"]::after {
  content: url("data:image/svg+xml,%3Csvg xmlns='https://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpolygon points='0, 0 8,0 4,8 8' fill='%23818688'/%3E%3C/svg%3E");
}
th button[data-dir="desc"]::after {
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpolygon points='4 0,8 8,0 8' fill='%23818688'/%3E%3C/svg%3E");
}

/* Edit and Delete Material icons */
td.options i:nth-child(1) {
  margin-right: 0.25em;
}

td.options i:nth-child(2) {
  margin-left: 0.25em;
}

/* User Submit Option */
.resource-form {
  display: none;
  width: 18%;
  position: absolute;
  top: 50%;
  right: 50%;
  padding: 2em;
  transform: translate(50%, -50%);
  background: #f6fdff;
  box-shadow: 30px 30px 40px #acb1b3, -30px -30px 40px #acb1b3;
}

.resource-form label,
.resource-form input,
.resource-form select,
.resource-form textarea,
.resource-form button {
  font-family: "Open Sans", sans-serif;
  color: #486169;
  width: 100%;
  box-sizing: border-box;
  margin-bottom: 1em;
}

button[type="submit"] {
  width: 10em;
}

#rating-input {
  border: rgb(97, 96, 96) 1px solid;
}
/* // Resource Submission Display  */
input[type="number"] {
  border: none;
  text-align: center;
  font-size: 1rem;
}

.editable {
  background-color: rgb(255, 255, 138);
}

/* Button Style */
button {
  padding: 0.5em;
  margin: 0.5em;
  border: 1px solid rgba(0, 0, 0, 0.4);
  font-family: "Open Sans", sans-serif;
  background-color: #f6fdff;
  border-radius: 8px;
}

button:hover {
  transform: scale(1.1);
  transition: background-color 0.2s ease-in-out;
}

button:active {
  transform: scale(1);
}
.add-resource-btn {
  position: absolute;
  margin-top: 2em;
  margin-left: 2em;
}

/* Footer */
.site-footer {
  margin-top: 1em;
  padding: 1em;
  text-align: center;
}

/* Media Break Points */

@media (max-width: 1550px) {
  body {
    font-size: .7rem;
  }
}


@media (max-width: 600px) {
  body {
    font-size: .6rem;
    /* height: 100vh; */
  }

  .resource-list.header {
    font-size: .7rem;
  }

  td.options i:nth-child(1) {
    font-size: 1rem;
  }

  td.options i:nth-child(2) {
    font-size: 1rem;
  }

 .add-resource-btn {
    width: 7em;
    font-size: .7rem;
  }

}

